  * Plugin: modified graph_args of generic/apache_processes, to work around
    an rrdtool bug (Deb#296528).
  * Plugins: All plugins using logtail now properly detect its format
    (Deb#297628).
  * Plugins: sunos/memory repaired (SF#1143610).
  * Plugins: Made linux/if_ work with more versions of iwlist (SF#1150954).

munin (1.2.0)

  * Main: Yet another rewrite of munin-limits open call (SF#1115434).
  * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
  * Plugins: linux/if* now treats ra* interfaces as wireless.
  * Plugins: minor bugfix in generic/bind9.
  * Plugins: generic/sendmail_mailqueue handles bigger queues (fix by Mickey
    Everts).
  * Plugins: Made contrib-plugins generic/amavis and generic/mailstats more
    secure.
  * Plugins: Minor bugfix in linux/if_, with info fields.
  * Plugins: Added warning note in linux/if_ output.
  * Plugins: generic/smart_ exit value no longer triggers criticals.
  * Plugins: linux/df* now ignores bind mounts.
  * Docs: Added man page for munin-node-configure-snmp.
  * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
  * Installation: Create CIGdir if nonexistant.

munin (1.2.0rc2)

  * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
  * Main: Make munin-limits work properly with perl <5.8 (SF#1109039).
  * Main: Bugfix in munin-cgi-graph with hostnames including - (SF#1111510).
  * Main: Added category_order, to complete the *_order options.
  * Plugins: Fix sendmail_mail{stats,traffic} autoconf handling.
  * Plugins: Fix linux/users #! line.
  * Plugins: Changed default log for generic/postfix_mailstats from syslog to
    mail.log. Downgraded it from auto to manual. (Deb#291720).
  * Plugins: Made generic/amavis autodetect logtail format (Deb#284638,
    Deb#288395).
  * Plugins: generic/named probes for more log files before giving up
    (Deb#291849).
  * Plugins: New wildcard plugin generic/courier_ by Micah Anderson 
    (Deb#291854). 