@@ -14,6 +14,7 @@ munin (work)
     (Deb#297628).
   * Plugins: sunos/memory repaired (SF#1143610).
   * Plugins: Made linux/if_ work with more versions of iwlist (SF#1150954).
+  * Plugins: generic/mailman now handles regular mailman (Deb#297904).
 
 munin (1.2.0)
 
